add the last image

--- a/landing-page.html
+++ b/landing-page.html
@@ -39,6 +39,7 @@
                   <li><a href=""><img class="border-r" src="./images/landing-badges.png" alt=""></a></li>
                   <li><a href=""><img class="border-r" src="./images/landing-why(1).png" alt=""></a></li>
                   <li><a href=""><img class="border-r" src="./images/landing-team.png" alt=""></a></li>
+                  <li><a href=""><img class="border-r" src="./images/index.jpg" alt="" ></a></li>
                   <li><a href=""><img class="border-r" src="./images/landing-projects(1).png" alt=""></a></li>
 
               </ul>
